<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@id/ll_pallet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/creed"
            />
        <com.nextin.drawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#80FFFFFF"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_menu_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_pallet"
        >
        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/change_the_size_of_brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush"
            />
        <ImageButton
            android:id="@+id/ibGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/change_the_size_of_brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gallery"
            />

        <ImageButton
            android:id="@+id/ibUndo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/change_the_size_of_brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_undo"
            />

        <ImageButton
            android:id="@+id/ibRedo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/change_the_size_of_brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_redo"
            />
        <ImageButton
            android:id="@+id/ibSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/change_the_size_of_brush"
            android:scaleType="fitXY"
            android:src="@drawable/ic_save"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_pallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_menu_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:tag="@color/red"
            android:contentDescription="@string/todo"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:tag="@color/black"
            android:contentDescription="@string/todo1"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/green"
            android:tag="@color/green"
            android:contentDescription="@string/todo2"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/aqua"
            android:tag="@color/aqua"
            android:contentDescription="@string/todo3"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/peach"
            android:tag="@color/peach"
            android:contentDescription="@string/todo4"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/office_green"
            android:tag="@color/office_green"
            android:contentDescription="@string/todo5"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/veronica"
            android:tag="@color/veronica"
            android:contentDescription="@string/todo6"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/yellow"
            android:tag="@color/yellow"
            android:contentDescription="@string/todo7"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/pink"
            android:tag="@color/pink"
            android:contentDescription="@string/todo8"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/orange"
            android:tag="@color/orange"
            android:contentDescription="@string/todo9"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
             />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@color/White"
            android:tag="@color/White"
            android:contentDescription="@string/todo9"
            android:onClick="paintClicked"
            android:src="@drawable/pallet_normal"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>